# scriptgen

./: .flake8  .gitignore  README.md  README_BADGES.md  SETUP.md  final_research_report_epstein_files_metrics.json  final_research_report_india_ai_summit_2026_-_full_report_metrics.json  final_research_report_india_ai_summit_2026_metrics.json  final_research_report_neuroplasticity_for_addictions_metrics.json  final_research_report_section_39a_and_what_it_means_for_goa_and_goans_metrics.json  final_research_report_section_39a_in_goa_what_and_why_metrics.json  metrics_history.json  pyproject.toml  pytest.ini  requirements.txt  run.py  workflow.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  test.yml
metrics/: evaluator.py
scriptgen/: __main__.py  setup.py
scriptgen/agents/: __init__.py  base.py  filter.py  judge.py  planner.py  researcher.py  retriever.py  topic_scout.py  writer.py
scriptgen/core/: state.py  workflow.py
scriptgen/utils/: __init__.py  image_prompt.py  knowledge_base.py  scorer.py
tests/: conftest.py
tests/integration/: test_workflow_integration.py
tests/unit/: test_async_search.py  test_evaluator.py  test_image_prompt.py  test_knowledge_base.py  test_research_system.py  test_scorer.py  test_topic_scout.py
